# Cpp

./: .gitignore  CMakeLists.txt  README.md  a.out  main.cpp
Inheritance_m/: Acc_2.cpp  Acc_2.h  Account.cpp  Account.h  Base_1.cpp  Base_1.h  Classes.cpp  Derived_1.cpp  Derived_1.h  Person.cpp  Person.h  SaveAccount.cpp  SaveAccount.h  Save_Acc_2.cpp  Save_Acc_2.h  in_main.cpp
Operator_overload/: MyString.cpp  OperatorOverload_my.cpp  OperatorOverload_my.h  oo_1.cpp
arr_and_vectors/: arr_and_vec.cpp
exceptions_my/: Except_my.cpp  Except_my.h
first/: hello.cpp
flow/: my_fl.cpp
func_in_cpp/: func.cpp
oop_section/: copy_constructor.cpp  my_cl.cpp  oop_main.cpp
oop_section/my_classes/: Account.cpp  Account.h  Player.cpp  my_cl.cpp  project_oop.cpp
pointer_my/: pointer_main.cpp
polymorphism_my/: Base_pol.cpp  Base_pol.h  Derived_pol.cpp  Derived_pol.h  Derived_pol_2.cpp  Derived_pol_2.h  Shape_pol.cpp  Shape_pol.h  Triangle_pol.cpp  Triangle_pol.h
smart_ptr_my/: Smart_Ptr_tester.cpp  Smart_Ptr_tester.h
string_my/: str_my.cpp
